did some work on drag shadow, fuigered out how to activate Content_Strip

--- a/ext/src/inject/inject.css
+++ b/ext/src/inject/inject.css
@@ -2,5 +2,14 @@
  * Place your custom CSS styles here.
  **/
 body{
+	/*
 	background: #000 !important;
+	*/
+}
+
+
+ [wasDragged]{
+		-webkit-box-shadow: 23px 24px 6px -5px rgba(69,67,67,0.58);
+		-moz-box-shadow: 23px 24px 6px -5px rgba(69,67,67,0.58);
+		box-shadow: 23px 24px 6px -5px rgba(69,67,67,0.58);
 }
