--- a/ext/src/inject/inject.css
+++ b/ext/src/inject/inject.css
@@ -1,10 +1,11 @@
 /**
- * Place your custom CSS styles here.
+ * 
  **/
 body{
-	/*
-	background: #000 !important;
-	*/
+  -webkit-user-select: none;  
+  -moz-user-select: none;    
+  -ms-user-select: none;      
+  user-select: none;
 }
 
 
