--- a/ext/src/inject/inject.css
+++ b/ext/src/inject/inject.css
@@ -7,7 +7,7 @@ body{
 }
 
 
- [wasDragged = deffinitly]{
+[wasDragged = deffinitly]{
 	-webkit-box-shadow: 23px 24px 6px -5px rgba(69,67,67,0.58);
 	-moz-box-shadow: 23px 24px 6px -5px rgba(69,67,67,0.58);
 	box-shadow: 23px 24px 6px -5px rgba(69,67,67,0.58);
@@ -18,8 +18,102 @@ body{
 }
 
 
- [wasDragged = was]{
-		-webkit-box-shadow: 10px 10px 5px -9px rgba(0,0,0,0.75);
-		-moz-box-shadow: 10px 10px 5px -9px rgba(0,0,0,0.75);
-		box-shadow: 10px 10px 5px -9px rgba(0,0,0,0.75);
+[wasDragged = was]{
+	-webkit-box-shadow: 10px 10px 5px -9px rgba(0,0,0,0.75);
+	-moz-box-shadow: 10px 10px 5px -9px rgba(0,0,0,0.75);
+	box-shadow: 10px 10px 5px -9px rgba(0,0,0,0.75);
+}
+
+.game-panel{
+    width: 100%;
+    height: 80px;
+    position: relative;
+    z-index: 1000000;
+    display: block;
+	font-size: 24px;
+    font-weight: 400;
+    background-color: rgb(36, 185, 231);
+    text-align: center;
+    direction: ltr;
+}
+
+.game-status{
+    position: absolute;
+    display: block;
+    overflow: hidden;
+    width: 400px;
+    height: 80px;
+    color: #fff;
+    font-size: 50px;
+    font-weight: bold;
+    line-height: 80px;
+    vertical-align: middle;
+    right: 0;
+    left: 0;
+    margin: 0 auto;
+    top: 0;
+    z-index: 80;
+}
+
+.game-clock{
+    display: block;
+    margin: 5px;
+    width: 145px;
+    font-size: 22px;
+    color: #fff;
+    line-height: 70px;
+    vertical-align: middle;
+    position: absolute;
+    left: 0;
+    top: 0;
+    border: 1px solid #061f26;
+    z-index: 80;
+    background-color: #1d7a97;
+    -moz-box-shadow: inset 9px 9px 30px 0px rgba(50, 50, 50, 0.5);
+    -webkit-box-shadow: inset 0px 0px 30px 5px rgba(50, 50, 50, 0.5);
+    -moz-box-shadow: inset 0px 0px 30px 5px rgba(50, 50, 50, 0.5);
+    box-shadow: inset 0px 0px 30px 5px rgba(50, 50, 50, 0.5);
+}
+
+.game-pause-icon{
+	display: block;
+	position: fixed;
+	z-index: 999999999999999;
+	width: 1px;
+	top: 20px;
+	left: 0;
+	right: 0;
+	margin: 0 auto;
+}
+
+.game-pause-icon:before{
+	display: block;
+	position: fixed;
+	z-index: 999999999999999;
+	content: " ";
+	width: 7.5vw;
+	height: 80vh;
+	top: 50%;
+	left: 40%;
+	transform: translateY(-50%);
+	background-color: rgba(255,255,255,0.5);
+	-webkit-box-shadow: 7px 7px 20px 0px rgba(50, 50, 50, 0.41);
+	-moz-box-shadow:    7px 7px 20px 0px rgba(50, 50, 50, 0.41);
+	box-shadow:         7px 7px 20px 0px rgba(50, 50, 50, 0.41);
+}
+
+.game-pause-icon:after{
+	display: block;
+	position: fixed;
+	z-index: 999999999999999;
+	content: " ";
+	width: 7.5vw;
+	height: 80vh;
+	top: 50%;
+	right: 40%;
+	transform: translateY(-50%);
+	background-color: rgba(255,255,255,0.5);
+	-webkit-box-shadow: 7px 7px 20px 0px rgba(50, 50, 50, 0.41);
+	-moz-box-shadow:    7px 7px 20px 0px rgba(50, 50, 50, 0.41);
+	box-shadow:         7px 7px 20px 0px rgba(50, 50, 50, 0.41);
 }
